# EchoCancellation

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/faqrobot/map/echocancellation/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  org_faqrobot_map_echocancellation_Speex.h
app/src/main/java/org/faqrobot/map/echocancellation/: MainActivity.java  Speex.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/faqrobot/map/echocancellation/: ExampleUnitTest.java
